Added `context` object to token API request body
RequestToken
------------
- Add `context` JsonObject field
- If not added in request, will be empty JSON object by default

PolicyServiceImpl
-----------------
- Get context from token request
- Add context to verifyConsumerPolicy method and when calling APD service

ApdServiceImpl
--------------
- Add context to APD `POST /verify` request body

ApiServerVerticle
-----------------
- When casting JSON request body to RequestToken, use the RequestToken
constructor instead of `mapTo`
	- `mapTo` caused issues - the context object can have any
	keys in it and for some reason mapTo didn't like that

OpenAPI
-------
- Updated token docs and added example

Postman
-------
- Added test for invalid context field
- Added test for passing context object containing all sorts of fields
for a valid APD policy-backed token request
